Enable JDK preview features also for testing